--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "dd3dbaa5",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "Trip_Duration_Minutes  87.7750  119.840000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,12 +335,264 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab24f50c",
+   "metadata": {},
+   "source": [
+    "### Handling missing values in categorical columns using mode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a285c7ec",
+   "execution_count": 31,
+   "id": "2315c5f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   Time_of_Day         950 non-null    object\n",
+      " 1   Day_of_Week         950 non-null    object\n",
+      " 2   Traffic_Conditions  950 non-null    object\n",
+      " 3   Weather             950 non-null    object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 31.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_categorical.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6f971f36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column              Non-Null Count  Dtype \n",
+      "---  ------              --------------  ----- \n",
+      " 0   Time_of_Day         1000 non-null   object\n",
+      " 1   Day_of_Week         1000 non-null   object\n",
+      " 2   Traffic_Conditions  1000 non-null   object\n",
+      " 3   Weather             1000 non-null   object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 31.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_categorical_mode = df_categorical.apply(lambda col:col.fillna(col.mode()[0]))\n",
+    "df_categorical_mode.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b9ee01c",
+   "metadata": {},
+   "source": [
+    "### Creating dummy columns and values for categorical features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4b77c68a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                     Non-Null Count  Dtype\n",
+      "---  ------                     --------------  -----\n",
+      " 0   Time_of_Day_Afternoon      1000 non-null   bool \n",
+      " 1   Time_of_Day_Evening        1000 non-null   bool \n",
+      " 2   Time_of_Day_Morning        1000 non-null   bool \n",
+      " 3   Time_of_Day_Night          1000 non-null   bool \n",
+      " 4   Day_of_Week_Weekday        1000 non-null   bool \n",
+      " 5   Day_of_Week_Weekend        1000 non-null   bool \n",
+      " 6   Traffic_Conditions_High    1000 non-null   bool \n",
+      " 7   Traffic_Conditions_Low     1000 non-null   bool \n",
+      " 8   Traffic_Conditions_Medium  1000 non-null   bool \n",
+      " 9   Weather_Clear              1000 non-null   bool \n",
+      " 10  Weather_Rain               1000 non-null   bool \n",
+      " 11  Weather_Snow               1000 non-null   bool \n",
+      "dtypes: bool(12)\n",
+      "memory usage: 11.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy_categoric_features = pd.get_dummies(df_categorical_mode)\n",
+    "dummy_categoric_features.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10cccd6b",
+   "metadata": {},
+   "source": [
+    "### Merging processed features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "02b4abd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   Trip_Distance_km           1000 non-null   float64\n",
+      " 1   Passenger_Count            1000 non-null   float64\n",
+      " 2   Base_Fare                  1000 non-null   float64\n",
+      " 3   Per_Km_Rate                1000 non-null   float64\n",
+      " 4   Per_Minute_Rate            1000 non-null   float64\n",
+      " 5   Trip_Duration_Minutes      1000 non-null   float64\n",
+      " 6   Time_of_Day_Afternoon      1000 non-null   bool   \n",
+      " 7   Time_of_Day_Evening        1000 non-null   bool   \n",
+      " 8   Time_of_Day_Morning        1000 non-null   bool   \n",
+      " 9   Time_of_Day_Night          1000 non-null   bool   \n",
+      " 10  Day_of_Week_Weekday        1000 non-null   bool   \n",
+      " 11  Day_of_Week_Weekend        1000 non-null   bool   \n",
+      " 12  Traffic_Conditions_High    1000 non-null   bool   \n",
+      " 13  Traffic_Conditions_Low     1000 non-null   bool   \n",
+      " 14  Traffic_Conditions_Medium  1000 non-null   bool   \n",
+      " 15  Weather_Clear              1000 non-null   bool   \n",
+      " 16  Weather_Rain               1000 non-null   bool   \n",
+      " 17  Weather_Snow               1000 non-null   bool   \n",
+      "dtypes: bool(12), float64(6)\n",
+      "memory usage: 58.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_clean = pd.concat([df_cleaned_numeric_outliers, dummy_categoric_features], axis=1)\n",
+    "\n",
+    "df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef8d75a6",
+   "metadata": {},
+   "source": [
+    "#### temorary join target to clean features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_with_target = pd.concat([df_clean, df_target], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea6f560",
+   "metadata": {},
+   "source": [
+    "### correlations with cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "642bceb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           Trip_Price\n",
+      "Trip_Price                   1.000000\n",
+      "Trip_Distance_km             0.841410\n",
+      "Per_Km_Rate                  0.263630\n",
+      "Trip_Duration_Minutes        0.219294\n",
+      "Per_Minute_Rate              0.134093\n",
+      "Traffic_Conditions_High      0.095082\n",
+      "Weather_Rain                 0.038793\n",
+      "Base_Fare                    0.035158\n",
+      "Day_of_Week_Weekday          0.030137\n",
+      "Time_of_Day_Afternoon        0.020465\n",
+      "Weather_Snow                 0.005764\n",
+      "Time_of_Day_Night           -0.004531\n",
+      "Time_of_Day_Evening         -0.005943\n",
+      "Passenger_Count             -0.013172\n",
+      "Time_of_Day_Morning         -0.014219\n",
+      "Day_of_Week_Weekend         -0.030137\n",
+      "Traffic_Conditions_Low      -0.030416\n",
+      "Weather_Clear               -0.038988\n",
+      "Traffic_Conditions_Medium   -0.044407\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaned_correlations = df_with_target.corr(numeric_only=True)[[\"Trip_Price\"]].sort_values(\n",
+    "    by=\"Trip_Price\", ascending=False\n",
+    ")\n",
+    "print(cleaned_correlations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b43670a8",
+   "metadata": {},
+   "source": [
+    "### dropping low correlating feats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "565da6dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dropped = df_clean.drop([\"Weather_Rain\",\n",
+    "                           \"Base_Fare\",\n",
+    "                           \"Day_of_Week_Weekday\",\n",
+    "                           \"Time_of_Day_Afternoon\",\n",
+    "                           \"Weather_Snow\",\n",
+    "                           \"Time_of_Day_Night\",\n",
+    "                           \"Time_of_Day_Evening\",\n",
+    "                           \"Passenger_Count\", \n",
+    "                           \"Time_of_Day_Morning\",\n",
+    "                           \"Day_of_Week_Weekend\",\n",
+    "                           \"Traffic_Conditions_Low\",\n",
+    "                           \"Weather_Clear\",\n",
+    "                           \"Traffic_Conditions_Medium\"],\n",
+    "                           axis=\"columns\"\n",
+    "                           )"
+   ]
   }
  ],
  "metadata": {
