--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,6 +149,24 @@
    "source": [
     "df_numeric, df_categorical, df_target = split_features_target(df)\n",
     "df_numeric.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a03a1b3",
+   "metadata": {},
+   "source": [
+    "### Removing outliers in target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "80a2438a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clipped_target = handle_outliers(df_target)"
    ]
   },
   {
@@ -161,33 +179,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "id": "dd3dbaa5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   Trip_Distance_km       1000 non-null   float64\n",
-      " 1   Passenger_Count        1000 non-null   float64\n",
-      " 2   Base_Fare              1000 non-null   float64\n",
-      " 3   Per_Km_Rate            1000 non-null   float64\n",
-      " 4   Per_Minute_Rate        1000 non-null   float64\n",
-      " 5   Trip_Duration_Minutes  1000 non-null   float64\n",
-      "dtypes: float64(6)\n",
-      "memory usage: 47.0 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_cleaned_numeric = fillna_mean_median(df_numeric)     \n",
-    "df_cleaned_numeric.info()     "
+    "df_filled_numeric = fillna_mean_median(df_numeric)        "
    ]
   },
   {
@@ -200,138 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "id": "1cbff0b2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
-       "      <th>max</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Trip_Distance_km</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>27.070547</td>\n",
-       "      <td>19.400775</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>13.1075</td>\n",
-       "      <td>26.995000</td>\n",
-       "      <td>37.7825</td>\n",
-       "      <td>146.067047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Passenger_Count</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>2.453000</td>\n",
-       "      <td>1.079331</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>2.0000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.0000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Base_Fare</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>3.502989</td>\n",
-       "      <td>0.848107</td>\n",
-       "      <td>2.01</td>\n",
-       "      <td>2.7700</td>\n",
-       "      <td>3.502989</td>\n",
-       "      <td>4.2025</td>\n",
-       "      <td>5.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Per_Km_Rate</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>1.233316</td>\n",
-       "      <td>0.418922</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.8700</td>\n",
-       "      <td>1.233316</td>\n",
-       "      <td>1.5800</td>\n",
-       "      <td>2.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Per_Minute_Rate</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>0.292916</td>\n",
-       "      <td>0.112662</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.1975</td>\n",
-       "      <td>0.292916</td>\n",
-       "      <td>0.3825</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Trip_Duration_Minutes</th>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>62.118116</td>\n",
-       "      <td>31.339413</td>\n",
-       "      <td>5.01</td>\n",
-       "      <td>37.1075</td>\n",
-       "      <td>62.118116</td>\n",
-       "      <td>87.7750</td>\n",
-       "      <td>119.840000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        count       mean        std   min      25%        50%  \\\n",
-       "Trip_Distance_km       1000.0  27.070547  19.400775  1.23  13.1075  26.995000   \n",
-       "Passenger_Count        1000.0   2.453000   1.079331  1.00   2.0000   2.000000   \n",
-       "Base_Fare              1000.0   3.502989   0.848107  2.01   2.7700   3.502989   \n",
-       "Per_Km_Rate            1000.0   1.233316   0.418922  0.50   0.8700   1.233316   \n",
-       "Per_Minute_Rate        1000.0   0.292916   0.112662  0.10   0.1975   0.292916   \n",
-       "Trip_Duration_Minutes  1000.0  62.118116  31.339413  5.01  37.1075  62.118116   \n",
-       "\n",
-       "                           75%         max  \n",
-       "Trip_Distance_km       37.7825  146.067047  \n",
-       "Passenger_Count         3.0000    4.000000  \n",
-       "Base_Fare               4.2025    5.000000  \n",
-       "Per_Km_Rate             1.5800    2.000000  \n",
-       "Per_Minute_Rate         0.3825    0.500000  \n",
-       "Trip_Duration_Minutes  87.7750  119.840000  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_cleaned_numeric_outliers = handle_outliers(df_cleaned_numeric)\n",
-    "df_cleaned_numeric_outliers.describe().T"
+    "df_clipped_numeric = handle_outliers(df_filled_numeric)"
    ]
   },
   {
@@ -344,59 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "2315c5f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   Time_of_Day         950 non-null    object\n",
-      " 1   Day_of_Week         950 non-null    object\n",
-      " 2   Traffic_Conditions  950 non-null    object\n",
-      " 3   Weather             950 non-null    object\n",
-      "dtypes: object(4)\n",
-      "memory usage: 31.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_categorical.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 77,
    "id": "6f971f36",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   Time_of_Day         1000 non-null   object\n",
-      " 1   Day_of_Week         1000 non-null   object\n",
-      " 2   Traffic_Conditions  1000 non-null   object\n",
-      " 3   Weather             1000 non-null   object\n",
-      "dtypes: object(4)\n",
-      "memory usage: 31.4+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_categorical_mode = df_categorical.apply(lambda col:col.fillna(col.mode()[0]))\n",
-    "df_categorical_mode.info()"
+    "df_categorical_mode = df_categorical.apply(lambda col:col.fillna(col.mode()[0]))"
    ]
   },
   {
@@ -409,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 78,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -454,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 79,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -491,7 +315,7 @@
     }
    ],
    "source": [
-    "df_clean = pd.concat([df_cleaned_numeric_outliers, dummy_categoric_features], axis=1)\n",
+    "df_clean = pd.concat([df_clipped_numeric, dummy_categoric_features], axis=1)\n",
     "\n",
     "df_clean.info()"
    ]
@@ -506,12 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_with_target = pd.concat([df_clean, df_target], axis=1)"
+    "df_with_target = pd.concat([df_clean, df_clipped_target], axis=1)"
    ]
   },
   {
@@ -524,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 81,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -534,24 +358,24 @@
      "text": [
       "                           Trip_Price\n",
       "Trip_Price                   1.000000\n",
-      "Trip_Distance_km             0.841410\n",
-      "Per_Km_Rate                  0.263630\n",
-      "Trip_Duration_Minutes        0.219294\n",
-      "Per_Minute_Rate              0.134093\n",
-      "Traffic_Conditions_High      0.095082\n",
-      "Weather_Rain                 0.038793\n",
-      "Base_Fare                    0.035158\n",
-      "Day_of_Week_Weekday          0.030137\n",
-      "Time_of_Day_Afternoon        0.020465\n",
-      "Weather_Snow                 0.005764\n",
-      "Time_of_Day_Night           -0.004531\n",
-      "Time_of_Day_Evening         -0.005943\n",
-      "Passenger_Count             -0.013172\n",
-      "Time_of_Day_Morning         -0.014219\n",
-      "Day_of_Week_Weekend         -0.030137\n",
-      "Traffic_Conditions_Low      -0.030416\n",
-      "Weather_Clear               -0.038988\n",
-      "Traffic_Conditions_Medium   -0.044407\n"
+      "Trip_Distance_km             0.733662\n",
+      "Per_Km_Rate                  0.390686\n",
+      "Trip_Duration_Minutes        0.324824\n",
+      "Per_Minute_Rate              0.232619\n",
+      "Traffic_Conditions_High      0.060803\n",
+      "Base_Fare                    0.047322\n",
+      "Weather_Rain                 0.027218\n",
+      "Passenger_Count              0.021124\n",
+      "Day_of_Week_Weekday          0.020927\n",
+      "Weather_Snow                 0.019503\n",
+      "Time_of_Day_Evening          0.005722\n",
+      "Time_of_Day_Afternoon        0.003905\n",
+      "Time_of_Day_Morning         -0.004881\n",
+      "Time_of_Day_Night           -0.007068\n",
+      "Traffic_Conditions_Low      -0.008125\n",
+      "Day_of_Week_Weekend         -0.020927\n",
+      "Weather_Clear               -0.035349\n",
+      "Traffic_Conditions_Medium   -0.040036\n"
      ]
     }
    ],
@@ -572,17 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 82,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_dropped = df_clean.drop([\"Weather_Rain\",\n",
-    "                           \"Base_Fare\",\n",
-    "                           \"Day_of_Week_Weekday\",\n",
-    "                           \"Time_of_Day_Afternoon\",\n",
-    "                           \"Weather_Snow\",\n",
-    "                           \"Time_of_Day_Night\",\n",
+    "df_dropped = df_clean.drop([\"Time_of_Day_Night\",\n",
     "                           \"Time_of_Day_Evening\",\n",
     "                           \"Passenger_Count\", \n",
     "                           \"Time_of_Day_Morning\",\n",
@@ -591,7 +410,13 @@
     "                           \"Weather_Clear\",\n",
     "                           \"Traffic_Conditions_Medium\"],\n",
     "                           axis=\"columns\"\n",
-    "                           )"
+    "                           )\n",
+    "\n",
+    "# \"Weather_Rain\",\n",
+    "# \"Base_Fare\",\n",
+    "# \"Day_of_Week_Weekday\",\n",
+    "# \"Time_of_Day_Afternoon\",\n",
+    "# \"Weather_Snow\","
    ]
   }
  ],
