--- a/explorations/data_cleaning.ipynb
+++ b/explorations/data_cleaning.ipynb
@@ -18,15 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "id": "f60e5763",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "from functions import split_features_target, fillna_mean_median, handle_outliers\n",
     "from taxipred.utils.constants import get_taxi_data\n",
     "df = get_taxi_data()"
@@ -42,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "id": "1b1db0bf",
    "metadata": {},
    "outputs": [
@@ -141,7 +138,7 @@
        "4                  22.64  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 32,
    "id": "80a2438a",
    "metadata": {},
    "outputs": [],
@@ -179,13 +176,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 33,
    "id": "dd3dbaa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Trip_Price  1000 non-null   float64\n",
+      "dtypes: float64(1)\n",
+      "memory usage: 7.9 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "df_filled_numeric = fillna_mean_median(df_numeric)        "
+    "df_filled_target = fillna_mean_median(df_clipped_target)\n",
+    "\n",
+    "df_filled_numeric = fillna_mean_median(df_numeric)      \n",
+    "df_filled_target.info()  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46bc2c69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -197,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "id": "1cbff0b2",
    "metadata": {},
    "outputs": [],
@@ -215,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 35,
    "id": "6f971f36",
    "metadata": {},
    "outputs": [],
@@ -228,12 +251,12 @@
    "id": "0b9ee01c",
    "metadata": {},
    "source": [
-    "### Creating dummy columns and values for categorical features"
+    "### Dumme encoding. Creating dummy columns and values for categorical features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 36,
    "id": "4b77c68a",
    "metadata": {},
    "outputs": [
@@ -278,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 37,
    "id": "02b4abd2",
    "metadata": {},
    "outputs": [
@@ -330,12 +353,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 38,
    "id": "7ccd9469",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_with_target = pd.concat([df_clean, df_clipped_target], axis=1)"
+    "df_with_target = pd.concat([df_clean, df_filled_target], axis=1)"
    ]
   },
   {
@@ -348,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "id": "642bceb0",
    "metadata": {},
    "outputs": [
@@ -358,24 +381,24 @@
      "text": [
       "                           Trip_Price\n",
       "Trip_Price                   1.000000\n",
-      "Trip_Distance_km             0.733662\n",
-      "Per_Km_Rate                  0.390686\n",
-      "Trip_Duration_Minutes        0.324824\n",
-      "Per_Minute_Rate              0.232619\n",
-      "Traffic_Conditions_High      0.060803\n",
-      "Base_Fare                    0.047322\n",
-      "Weather_Rain                 0.027218\n",
-      "Passenger_Count              0.021124\n",
-      "Day_of_Week_Weekday          0.020927\n",
-      "Weather_Snow                 0.019503\n",
-      "Time_of_Day_Evening          0.005722\n",
-      "Time_of_Day_Afternoon        0.003905\n",
-      "Time_of_Day_Morning         -0.004881\n",
-      "Time_of_Day_Night           -0.007068\n",
-      "Traffic_Conditions_Low      -0.008125\n",
-      "Day_of_Week_Weekend         -0.020927\n",
-      "Weather_Clear               -0.035349\n",
-      "Traffic_Conditions_Medium   -0.040036\n"
+      "Trip_Distance_km             0.717884\n",
+      "Per_Km_Rate                  0.381859\n",
+      "Trip_Duration_Minutes        0.318678\n",
+      "Per_Minute_Rate              0.226293\n",
+      "Traffic_Conditions_High      0.059150\n",
+      "Base_Fare                    0.046055\n",
+      "Weather_Rain                 0.026548\n",
+      "Passenger_Count              0.020573\n",
+      "Day_of_Week_Weekday          0.020459\n",
+      "Weather_Snow                 0.019309\n",
+      "Time_of_Day_Evening          0.005622\n",
+      "Time_of_Day_Afternoon        0.003808\n",
+      "Time_of_Day_Morning         -0.004737\n",
+      "Time_of_Day_Night           -0.006912\n",
+      "Traffic_Conditions_Low      -0.007922\n",
+      "Day_of_Week_Weekend         -0.020459\n",
+      "Weather_Clear               -0.034544\n",
+      "Traffic_Conditions_Medium   -0.039092\n"
      ]
     }
    ],
@@ -396,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "id": "565da6dc",
    "metadata": {},
    "outputs": [],
@@ -417,6 +440,26 @@
     "# \"Day_of_Week_Weekday\",\n",
     "# \"Time_of_Day_Afternoon\",\n",
     "# \"Weather_Snow\","
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d7a16a",
+   "metadata": {},
+   "source": [
+    "# Exporting data to csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9d50010b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_path = \"../src/taxipred/data/cleaned_data.csv\"\n",
+    "\n",
+    "df_cleaned.to_csv(export_path, index=False)"
    ]
   }
  ],
