--- a/explorations/model.ipynb
+++ b/explorations/model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "bfe0abd6",
    "metadata": {},
    "outputs": [
@@ -158,17 +158,18 @@
     "from sklearn.svm import SVR\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score, make_scorer\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "import joblib\n",
-    "from datetime import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from taxipred.utils.constants import get_clean_data\n",
-    "from functions import split_features_target\n",
+    "from Cleaning_functions import split_features_target\n",
+    "from model_functions import train_evaluate\n",
     "\n",
     "df = get_clean_data()\n",
     "df.head()"
@@ -336,44 +337,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 86,
-   "id": "edeb63c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['linear', 'knn', 'svr', 'rnd', 'mlp', 'ridge', 'lasso', 'xgb'])\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.base import BaseEstimator\n",
-    "\n",
-    "\n",
-    "# model = Pipeline(\n",
-    "#     steps=[\n",
-    "#         (\"preprocessor\", StandardScaler()),\n",
-    "#         (\"classifier\", RandomForestRegressor()),\n",
-    "#     ]\n",
-    "# )\n",
-    "# model.get_params()\n",
-    "\n",
-    "models = {\"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
-    "          \"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
-    "          \"svr\": {\"model\": SVR(), \"scale\": True},\n",
-    "          \"rnd\": {\"model\": RandomForestRegressor(), \"scale\": False},\n",
-    "          \"mlp\": {\"model\": MLPRegressor(), \"scale\": True},\n",
-    "          \"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
-    "          \"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
-    "          \"xgb\": {\"model\": XGBRegressor(), \"scale\": True}\n",
-    "}\n",
-    "print(models.keys())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4091511a",
    "metadata": {},
@@ -391,13 +354,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "a2eafa77",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# creating a dict for different estimators\n",
+    "# creating a dict for different estimators to evaluate\n",
     "models = {\"linear\": {\"model\": LinearRegression(), \"scale\": True},\n",
     "          \"knn\": {\"model\": KNeighborsRegressor(), \"scale\": True},\n",
     "          \"svr\": {\"model\": SVR(), \"scale\": True},\n",
@@ -406,69 +369,7 @@
     "          \"ridge\": {\"model\": Ridge(), \"scale\": True},\n",
     "          \"lasso\":{\"model\": Lasso(), \"scale\": True},\n",
     "          \"xgb\": {\"model\": XGBRegressor(), \"scale\": True}\n",
-    "}\n",
-    "\n",
-    "# method for tuning/validating different estimators\n",
-    "def train_evaluate(X_train, y_train, X_test, y_test, model=models): \n",
-    "    \n",
-    "    results = []\n",
-    "    best_model = None\n",
-    "    best_score = -float(\"inf\")\n",
-    "    \n",
-    "    for name, model in models.items():\n",
-    "        steps = []\n",
-    "        if model[\"scale\"]:\n",
-    "            steps.append((\"scaler\", StandardScaler()))\n",
-    "        steps.append((\"model\", model[\"model\"]))\n",
-    "        \n",
-    "        # ensure y_train is 1D-array\n",
-    "        # if hasattr(y_train, \"values\") and y_train.ndim == 2:\n",
-    "        #     y_train = y_train.values.ravel()\n",
-    "    \n",
-    "        #get/set params\n",
-    "        pipeline = Pipeline(steps)\n",
-    "        grid = GridSearchCV(pipeline, pipeline.get_params(), cv=3, scoring=\"r2\", n_jobs=-1)\n",
-    "        grid.fit(X_train, y_train)\n",
-    "    \n",
-    "        score = grid.best_score_\n",
-    "        results.append({\n",
-    "            \"Model\": name,\n",
-    "            \"Best R2\": score,\n",
-    "            \"Best Params\": grid.best_params_\n",
-    "        })\n",
-    "\n",
-    "        if score > best_score:\n",
-    "            best_score = score\n",
-    "            best_model = grid.best_estimator_\n",
-    "            best_name = name\n",
-    "            \n",
-    "        pipeline.set_params(grid.best_params_)\n",
-    "    \n",
-    "\n",
-    "    print(f\"Best model: ({best_name})\")   \n",
-    "\n",
-    "    # train & predict model\n",
-    "    model.fit(X_train, y_train)\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    \n",
-    "\n",
-    "    # evaluate\n",
-    "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    rmse = np.sqrt(mse)\n",
-    "    r2 = r2_score(y_test, y_pred)\n",
-    "\n",
-    "    # visualize results\n",
-    "    metrics = {\n",
-    "        \"MAE\": round(mae, 2),\n",
-    "        \"MSE\": round(mse, 2),\n",
-    "        \"RMSE\": round(rmse, 2),\n",
-    "        \"R2\": round(r2, 2)\n",
-    "    }\n",
-    "    # Export model\n",
-    "    # joblib.dump(model, model_path)\n",
-    "    #return model, metrics\n",
-    "    return model, metrics, pd.DataFrame(results).sort_values(by=\"Best R2\", ascending=False), best_model"
+    "}"
    ]
   },
   {
@@ -481,56 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "3b223343",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def tune_hyperparams():\n",
-    "#     # Define the parameter grid for GridSearchCV\n",
-    "#     param_grid = {\n",
-    "#         'n_estimators': [50, 100, 150],  \n",
-    "#         'max_depth': [None, 10, 20], \n",
-    "#         'min_samples_split': [2, 5, 10],  \n",
-    "#         'min_samples_leaf': [1, 2, 4], \n",
-    "#         'max_features': ['sqrt', 'log2', None]\n",
-    "# }\n",
-    "#     # Initialize the Random Forest model\n",
-    "#     rf_model = RandomForestRegressor(random_state=42)\n",
-    "#     # Set up GridSearchCV\n",
-    "#     grid_search = GridSearchCV(estimator=rf_model, \n",
-    "#                             param_grid=param_grid, \n",
-    "#                             cv=5, \n",
-    "#                             n_jobs=-1, \n",
-    "#                             scoring='accuracy')\n",
-    "#     # Fit GridSearchCV to the training data\n",
-    "#     grid_search.fit(X_train, y_train)\n",
-    "#     # Get the best model from GridSearchCV and make predictions\n",
-    "#     best_rf_model = grid_search.best_estimator_\n",
-    "#     y_pred_gs = best_rf_model.predict(X_test)\n",
-    "#     y_pred_prob_gs = best_rf_model.predict_proba(X_test)[:, 1]  # For ROC-AUC\n",
-    "#     # Calculate accuracy and ROC-AUC for the best model\n",
-    "#     accuracy = accuracy_score(y_test, y_pred_gs)\n",
-    "#     roc_auc = roc_auc_score(y_test, y_pred_prob_gs)\n",
-    "#     # Cross-validation for accuracy and ROC-AUC\n",
-    "#     accuracy_scores = grid_search.cv_results_['mean_test_score']\n",
-    "#     mean_accuracy = np.mean(accuracy_scores)\n",
-    "#     std_accuracy = np.std(accuracy_scores)\n",
-    "#     roc_auc_scores = cross_val_score(best_rf_model, X_train, y_train, cv=5, scoring=make_scorer(roc_auc_score))\n",
-    "#     mean_roc_auc = np.mean(roc_auc_scores)\n",
-    "#     std_roc_auc = np.std(roc_auc_scores)\n",
-    "#     # Display results\n",
-    "#     print(f\"Best Hyperparameters from Grid Search: {grid_search.best_params_}\")\n",
-    "#     print(f\"Cross-validation Accuracy: {mean_accuracy:.4f} ± {std_accuracy:.4f}\")\n",
-    "#     print(f\"Cross-validation ROC-AUC: {mean_roc_auc:.4f} ± {std_roc_auc:.4f}\")\n",
-    "#     print(f\"Test Accuracy: {accuracy:.4f}\")\n",
-    "#     print(f\"Test ROC-AUC: {roc_auc:.4f}\")\n",
-    "#     # https://www.blog.trainindata.com/random-forest-with-grid-search/"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "dc8f0102",
    "metadata": {},
    "outputs": [
@@ -555,7 +407,7 @@
     "metric_results = []\n",
     "\n",
     "for model in models:\n",
-    "    model, metrics = train_evaluate(X_train, y_train, X_test, y_test, model=model)\n",
+    "    model, metrics = train_evaluate(X_train, y_train, X_test, y_test, models)\n",
     "    metric_results.append({\n",
     "        \"Model\": model,\n",
     "        \"MAE\": metrics[\"MAE\"],\n",
